<resources>
    <string name="app_name">Travel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Logout</string>

    <string name="kota_asal_travel">Kota asal</string>
    <string name="kota_tujuan_travel">Kota tujuan</string>
    <string name="tanggal_travel_berangkat">Tanggal berangkat</string>
    <string name="jml_travel_berangkat">Jumlah penumpang</string>
    <string name="jam_travel_berangkat">Jam</string>
    <string name="cari_kota">Cari Kota</string>
    <string name="btn_cari_travel">Cari</string>

    <string name="user_login">Username</string>
    <string name="pass_login">Password</string>
    <string name="btn_login">Login</string>
</resources>
