<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="false">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sigit.pertama.TravelActivity"
    android:background="#eee">

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#fff">

            <EditText
                android:id="@+id/input_kota_asal_travel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:inputType="text"
                android:background="@drawable/form_border_rounded_corner"
                android:hint="@string/kota_asal_travel"/>


            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/form_border_rounded_corner"
                    android:id="@+id/input_kota_tujuan_travel"
                    android:inputType="text"
                    android:hint="@string/kota_tujuan_travel" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/form_border_rounded_corner"
                    android:id="@+id/jml_travel_berangkat"
                    android:inputType="number"
                    android:hint="@string/jml_travel_berangkat" />

            <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/form_border_rounded_corner"
                    android:id="@+id/input_tgl_travel"
                    android:inputType="text"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/tanggal_travel_berangkat" />

                <EditText
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/form_border_rounded_corner"
                    android:id="@+id/jam_trv_berangkat"
                    android:inputType="text"
                    android:hint="@string/jam_travel_berangkat" />

            </LinearLayout>


            <Button android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_cari_travel"
                android:background="@drawable/button_bg_rounded_corners"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
</LinearLayout>
</ScrollView>
